# angle_meson

./: .gitignore  README.md  meson.build  meson.options
lib/UWP_Lib/Debug_x64/lib/: libEGL.dll.lib  libGLESv2.dll.lib
lib/UWP_Lib/Debug_x86/lib/: libGLESv2.dll.lib
lib/UWP_Lib/Release_ARM/lib/: angle_util.dll.lib
lib/UWP_Lib/Release_x86/lib/: libEGL.dll.lib
lib/Win32_Lib/Debug_x64/lib/: angle_util.dll.lib  libGLESv2.dll.lib
lib/Win32_Lib/Debug_x86/lib/: angle_util.dll.lib  libEGL.dll.lib  libGLESv2.dll.lib
lib/Win32_Lib/Release_x64/lib/: angle_util.dll.lib
lib/Win32_Lib/Release_x86/lib/: angle_util.dll.lib  libEGL.dll.lib  libGLESv2.dll.lib
tools/: angle_fetch_and_build.bat
